assets/css/style.css
/* ... */
@media only screen and (max-width: 1200px) {
    .menu_image-black3 {
        display: none
    }
}

@media only screen and (max-width: 990px) {
    .menu_image-black3 {
        margin-left: 0 !important
    }
}

.menu_image-img4 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: 10000
}

@media only screen and (max-width: 1200px) {
    .menu_image-img4 {
        height: 100%
    }
}

@media only screen and (max-width: 1200px) {
    .menu_image-img4 {
        position: relative;
        height: auto;
        margin: 1rem 0
    }
}

.menu_image {
    background-color: #333;
}

.menu_image-img444 {
    display: block;
    margin: 0 auto;
    padding: 50px 0;
    /* position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: 10000 */
}

@media only screen and (max-width: 1200px) {
    .menu_image-img444 {
        height: 100%
    }
}

@media only screen and (max-width: 1200px) {
    .menu_image-img444 {
        position: relative;
        height: auto;
        margin: 1rem 0
    }
}

.menu_image-img5 {
    width: 100%;
    height: 55rem !important;
    object-fit: cover
}

@media only screen and (max-width: 1200px) {
    .menu_image-img5 {
        height: 100%
    }
}

@media only screen and (max-width: 1200px) {
    .menu_image-img5 {
        position: relative;
        height: auto;
        margin: 1rem 0
    }
}

.menu_image-img6 {
    background-image: url("../img/security.jpeg");
    background-position: left center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 47.5rem;
    height: 66.2rem
}

@media only screen and (max-width: 1400px) {
    .menu_image-img6 {
        width: 100%
    }
}

@media only screen and (max-width: 1200px) {
    .menu_image-img6 {
        position: relative;
        margin: 1rem 0
    }
}

.menu_image-owl {
    width: 100%;
    height: 44.3rem;
    object-fit: cover
}

.menu_image-owl--p {
    font-family: var(--fontfamilyFont2);
    font-size: 2rem;
    font-weight: 400;
    line-height: 24px;
    text-align: center;
    color: #fff;
    margin: 1rem 0
}

.menu_image-owl2 {
    width: 90%;
    height: 31.4rem;
    margin: 0 1rem;
    object-fit: cover
}

.menu_image-bg {
    width: 38rem;
    height: 52rem
}

@media only screen and (max-width: 990px) {
    .menu_image-bg {
        width: 100%;
        height: 48rem
    }
}

.menu_image-faq {
    background: #FFFFFF80;
    width: 52.0rem;
    height: auto;
    position: absolute;
    top: 63%;
    left: -10rem;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2rem 4rem;
    box-shadow: -16.2px -16.2px 23.4px 0px #00000020;
    backdrop-filter: blur(5px);
    z-index: 1000000 !important
}

@media only screen and (max-width: 1400px) {
    .menu_image-faq {
        left: 1rem
    }
}

@media only screen and (max-width: 990px) {
    .menu_image-faq {
        position: relative;
        top: 0;
        left: 0;
        width: 100%
    }
}

.menu_header2 {
    display: flex;
    justify-content: center;
    gap: 1rem;
    padding: 2rem 0;
    margin-bottom: -9rem !important
}

@media only screen and (max-width: 768px) {
    .menu_header2 {
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: .5rem;
        padding: 0
    }
}

.menu_header {
    display: flex;
    justify-content: center;
    gap: 1rem;
    padding: 2rem 0;
    padding-bottom: 5rem !important
}

@media only screen and (max-width: 768px) {
    .menu_header {
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: .5rem;
        padding: 0 !important;
        padding-bottom: 2rem !important
    }
}

.menu_header-title {
    font-family: var(--fontfamilyFont2);
    font-size: 3.6rem;
    font-weight: 400;
    line-height: var(--lineheight715);
    letter-spacing: var(--letterspacing09);
    text-align: left;
    text-transform: uppercase;
    margin-bottom: 1rem;
    position: relative
}

@media only screen and (max-width: 768px) {
    .menu_header-title {
        margin-top: 1rem !important;
        text-align: center !important
    }
}

.menu_header-title2 {
    font-family: var(--fontfamilyFont2);
    font-size: 3.6rem;
    font-weight: 400;
    line-height: var(--lineheight715);
    letter-spacing: var(--letterspacing09);
    text-align: left;
    text-transform: uppercase;
    margin-bottom: 2rem;
    white-space: nowrap;
    position: relative
}

@media only screen and (max-width: 1600px) {
    .menu_header-title2 {
        white-space: normal !important
    }
}

@media only screen and (max-width: 1200px) {
    .menu_header-title2 {
        white-space: normal !important;
        padding-left: 1rem;
        text-align: center
    }
}

.menu_header-title3 {
    font-family: "Montserrat", sans-serif;
    font-size: 2.5rem;
    font-weight: 400;
    line-height: var(--lineheight715);
    letter-spacing: var(--letterspacing09);
    text-align: left;
    text-transform: uppercase;
    margin-bottom: 2rem;
    white-space: nowrap;
    position: relative
}

@media only screen and (max-width: 1600px) {
    .menu_header-title3 {
        white-space: normal !important
    }
}

@media only screen and (max-width: 1200px) {
    .menu_header-title3 {
        white-space: normal !important;
        padding-left: 1rem;
        text-align: center
    }
}

.menu_header-separator {
    width: 2px;
    height: 100px;
    background-color: #333;
    border: none;
    margin: 0
}

.menu_header-title2 {
    font-family: var(--fontfamilyFont2);
    font-size: 3.6rem;
    font-weight: 400;
    letter-spacing: var(--letterspacing09);
    text-align: left;
    text-transform: uppercase;
    margin-top: 5rem;
    position: relative
}

@media only screen and (max-width: 768px) {
    .menu_header-title2 {
        margin-top: .5rem;
        text-align: center
    }
}
/* ... */

